# scuffscript

./: Cargo.toml  README.md
compiler/: Cargo.toml  README.md
compiler/src/: ast.rs  frontend.rs  lexer.rs  main.rs  parser.rs  test.rs
compiler/src/llvm/: mod.rs
compiler/src/mlir/: ast.rs  mod.rs  utils.rs
compiler/tests/: prog  prog.ll  prog.s  test1.mlir  unoptimized.mlir
compiler/tests/func_call/: in.scuff  out.ll  out.s
compiler/tests/if_else/: in.scuff
compiler/tests/if_else_1/: in.scuff  out.ll  out.s
compiler/tests/if_else_2/: in.scuff  out.ll  out.s
compiler/tests/simple/: in.scuff  out.s
compiler/tests/simple1/: out.ll
mlir-dialect/: CMakeLists.txt  README.md
mlir-dialect/include/: CMakeLists.txt
mlir-dialect/include/ScuffScript/: CMakeLists.txt  ScuffScriptDialect.h  ScuffScriptDialect.td  ScuffScriptOps.h  ScuffScriptOps.td  ScuffScriptPasses.h  ScuffScriptPasses.td  ScuffScriptTypes.h  ScuffScriptTypes.td
mlir-dialect/include/ScuffScript-c/: Dialects.h
mlir-dialect/lib/: CMakeLists.txt
mlir-dialect/lib/CAPI/: CMakeLists.txt  Dialects.cpp
mlir-dialect/lib/ScuffScript/: CMakeLists.txt  ScuffScriptDialect.cpp  ScuffScriptOps.cpp  ScuffScriptPasses.cpp  ScuffScriptTypes.cpp
mlir-dialect/python/: CMakeLists.txt  ScuffScriptExtension.cpp
mlir-dialect/python/mlir_scuffscript/dialects/: ScuffScriptOps.td  scuffscript.py
mlir-dialect/scuffscript-opt/: CMakeLists.txt  scuffscript-opt.cpp
mlir-dialect/scuffscript-plugin/: CMakeLists.txt  scuffscript-plugin.cpp
mlir-dialect/scuffscript-translate/: CMakeLists.txt  scuffscript-translate.cpp
mlir-dialect/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
mlir-dialect/test/CAPI/: CMakeLists.txt  scuffscript-capi-test.c
mlir-dialect/test/ScuffScript/: dummy.mlir  scuffscript-opt.mlir  scuffscript-pass-plugin.mlir  scuffscript-plugin.mlir  scuffscript-translate.mlir
mlir-dialect/test/python/: smoketest.py
src/: ast.rs  lexer.rs  main.rs  parser.rs
